--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,10 @@
     "@types/node": "^14.6.4",
     "axios": "^0.21.1",
     "cors": "^2.8.5",
+    "ethereum-checksum-address": "^0.0.6",
     "express": "^4.17.1",
+    "ioredis": "^4.27.8",
+    "js-sha3": "^0.5.7",
     "nodemon": "^2.0.4",
     "redis": "^3.1.2",
     "ts-node": "^9.0.0",
